# cu-pysave

./: .gitignore  LICENSE  README.md  pyproject.toml  test.json  test2.json
src/: bodylimbs.py  savefile.py
src/cu_pysave/: __init__.py  bodylimbs.py  savefile.py
