[project]
name = "cu_pysave"
version = "0.1.0"
description = "A simple JSON+gzip savefile wrapper"
authors = [
    { name = "detotix" }
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
